envoy-xds.yaml
admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  clusters:
  - connect_timeout: 5s
    load_assignment:
      cluster_name: default-local-mcp-backend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: mcp-everything-svc.default.svc.cluster.local
                port_value: 3001
    name: default-local-mcp-backend
    type: STRICT_DNS
  - connect_timeout: 5s
    load_assignment:
      cluster_name: default-remote-mcp-backend
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: mcp.deepwiki.com
                port_value: 443
    name: default-remote-mcp-backend
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        '@type': type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: mcp.deepwiki.com
    type: LOGICAL_DNS
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 10001
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          http_filters:
          - name: envoy.filters.http.jwt_authn
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
              providers:
                kubernetes_provider:
                  claim_to_headers:
                  - claim_name: sub
                    header_name: x-user-role
                  from_headers:
                  - name: x-k8s-sa-token
                  issuer: https://kubernetes.default.svc.cluster.local
                  local_jwks:
                    filename: /etc/envoy/jwks/jwks.json
              rules:
              - match:
                  prefix: /
                requires:
                  provider_name: kubernetes_provider
          - name: envoy.filters.http.mcp
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.mcp.v3.Mcp
          - name: envoy.filters.http.rbac
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBAC
          - name: envoy.filters.http.router
            typed_config:
              '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: route-10001
            virtual_hosts:
            - domains:
              - '*'
              name: agentic-net-gateway-vh-10001-*
              routes:
              - match:
                  path_separated_prefix: /remote/mcp
                name: default-httproute-remote-mcp-rule0-match0
                route:
                  prefix_rewrite: /mcp
                  weighted_clusters:
                    clusters:
                    - host_rewrite_literal: mcp.deepwiki.com
                      name: default-remote-mcp-backend
                      typed_per_filter_config:
                        envoy.filters.http.rbac:
                          '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBACPerRoute
                          rbac:
                            rules:
                              policies:
                                allow-anyone-to-initialize-and-list-tools:
                                  permissions:
                                  - or_rules:
                                      rules:
                                      - sourced_metadata:
                                          metadata_matcher:
                                            filter: mcp_proxy
                                            path:
                                            - key: method
                                            value:
                                              or_match:
                                                value_matchers:
                                                - string_match:
                                                    exact: initialize
                                                - string_match:
                                                    exact: notifications/initialized
                                                - string_match:
                                                    exact: tools/list
                                      - header:
                                          name: :method
                                          string_match:
                                            exact: GET
                                  principals:
                                  - any: true
                                allow-mcp-session-close:
                                  permissions:
                                  - any: true
                                  principals:
                                  - and_ids:
                                      ids:
                                      - header:
                                          name: :method
                                          string_match:
                                            exact: DELETE
                                      - header:
                                          name: mcp-session-id
                                          present_match: true
                                default-remote-mcp-backend-rule-0:
                                  permissions:
                                  - and_rules:
                                      rules:
                                      - sourced_metadata:
                                          metadata_matcher:
                                            filter: mcp_proxy
                                            path:
                                            - key: method
                                            value:
                                              string_match:
                                                exact: tools/call
                                      - sourced_metadata:
                                          metadata_matcher:
                                            filter: mcp_proxy
                                            path:
                                            - key: params
                                            - key: name
                                            value:
                                              string_match:
                                                exact: read_wiki_structure
                                  principals:
                                  - or_ids:
                                      ids:
                                      - header:
                                          name: x-user-role
                                          string_match:
                                            exact: system:serviceaccount:default:adk-agent-sa
                      weight: 1
              - match:
                  path_separated_prefix: /local/mcp
                name: default-httproute-local-mcp-rule0-match0
                route:
                  prefix_rewrite: /mcp
                  weighted_clusters:
                    clusters:
                    - name: default-local-mcp-backend
                      typed_per_filter_config:
                        envoy.filters.http.rbac:
                          '@type': type.googleapis.com/envoy.extensions.filters.http.rbac.v3.RBACPerRoute
                          rbac:
                            rules:
                              policies:
                                allow-anyone-to-initialize-and-list-tools:
                                  permissions:
                                  - or_rules:
                                      rules:
                                      - sourced_metadata:
                                          metadata_matcher:
                                            filter: mcp_proxy
                                            path:
                                            - key: method
                                            value:
                                              or_match:
                                                value_matchers:
                                                - string_match:
                                                    exact: initialize
                                                - string_match:
                                                    exact: notifications/initialized
                                                - string_match:
                                                    exact: tools/list
                                      - header:
                                          name: :method
                                          string_match:
                                            exact: GET
                                  principals:
                                  - any: true
                                allow-mcp-session-close:
                                  permissions:
                                  - any: true
                                  principals:
                                  - and_ids:
                                      ids:
                                      - header:
                                          name: :method
                                          string_match:
                                            exact: DELETE
                                      - header:
                                          name: mcp-session-id
                                          present_match: true
                                default-local-mcp-backend-rule-0:
                                  permissions:
                                  - and_rules:
                                      rules:
                                      - sourced_metadata:
                                          metadata_matcher:
                                            filter: mcp_proxy
                                            path:
                                            - key: method
                                            value:
                                              string_match:
                                                exact: tools/call
                                      - sourced_metadata:
                                          metadata_matcher:
                                            filter: mcp_proxy
                                            path:
                                            - key: params
                                            - key: name
                                            value:
                                              or_match:
                                                value_matchers:
                                                - string_match:
                                                    exact: add
                                                - string_match:
                                                    exact: getTinyImage
                                  principals:
                                  - or_ids:
                                      ids:
                                      - header:
                                          name: x-user-role
                                          string_match:
                                            exact: system:serviceaccount:default:adk-agent-sa
                      weight: 1
          stat_prefix: agentic-net-gateway-listener1
    listener_filters:
    - name: envoy.filters.listener.tls_inspector
      typed_config:
        '@type': type.googleapis.com/envoy.extensions.filters.listener.tls_inspector.v3.TlsInspector
    name: listener-10001
